--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Zulu War, 1879 -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'South Africa -- English-Afrikaner relations -- Juvenile fiction'
+- GITenberg
 title: Perils in the Transvaal and Zululand
 url: http://www.gutenberg.org/ebooks/38175
